--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^3.4.1",
     "install": "^0.13.0",
+    "isomorphic-fetch": "^3.0.0",
     "npm": "^7.20.1",
     "react": "^17.0.2",
     "react-bootstrap": "^0.33.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -41,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://moments-backend-yanchen.herokuapp.com"
 }
