--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^3.4.1",
+    "http-proxy-middleware": "^2.0.1",
     "install": "^0.13.0",
     "isomorphic-fetch": "^3.0.0",
     "npm": "^7.20.1",
@@ -44,6 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://moments-backend-yanchen.herokuapp.com"
+  }
 }
