--- a/src/.env.development
+++ b/src/.env.development
@@ -1,1 +1,2 @@
-HOST=https://moments-backend-yanchen.herokuapp.com
+HOST=moments-backend-yanchen.herokuapp.com/
+DANGEROUSLY_DISABLE_HOST_CHECK=true
